--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,5 @@
-## datasource 
-#datasource.driver=org.h2.Driver
-#datasource.url=jdbc:h2:mem:flight-booking
-#datasource.username=sa
-#datasource.password=
-#
-##Hibernate
-#hibernate.dialect=org.hibernate.dialect.H2Dialect
-#hibernate.hbm2ddl.auto=update
-#hibernate.show_sql=true
-#hibernate.use_sql_comments=true
-#hibernate.format_sql=true
-#hibernate.batch.size=20
-#hibernate.current.session.context.class=org.springframework.orm.hibernate5.SpringSessionContext
 
+#spring.application.index=/console
 
 ###
 #   Database Settings
@@ -25,7 +12,7 @@ spring.datasource.driverClassName = org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 ###
-#   H2 Settings
+#   H2 Console Settings
 ###
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
@@ -42,5 +29,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.batch.size=20
 spring.jpa.properties.hibernatecurrent.session.context.class=org.springframework.orm.hibernate5.SpringSessionContext
 
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
